# emm

./: MANIFEST.in  README.md  pyproject.toml
dat/Ag/: Johnson.txt  Johnson.yaml
dat/Al/: CRC.txt
dat/Al2O3/: Palik.txt
dat/AlSb/: Adachi.txt
dat/Au/: Johnson.txt
dat/BP/: Wettling.txt
dat/C/: Phillip.txt
dat/CdSe/: Bond_o.txt  Lisitsa_o.txt
dat/Cr/: CRC.txt  CRC2.txt  Johnson.txt
dat/Cu/: Querry.txt  Rakic.txt
dat/GaAs/: Aspnes
dat/GaN/: Adachi.txt
dat/GaP/: Adachi.txt  Aspnes.txt
dat/Ge/: Aspnes.txt  Ciesielski.txt
dat/InAs/: Aspnes.txt
dat/LC/: 5CB - Li.txt  5PCH - Li.txt  E44 - Li.txt  E7 - Li.txt  MLC-9200-000 - Li.txt  MLC-9200-100 - Li.txt  TL-216 - Li.txt
dat/Ni/: CRC.txt
dat/PDMS/: Zhang.txt
dat/Si/: Aspnes.txt  Palik.txt
dat/Si3N4/: Kischkat.txt  Luke.txt
dat/SiC/: Alterovitz.txt
dat/Sn/: Palik.txt
dat/Ti/: Johnson.txt  Palik.txt
dat/TiO2/: Devore.txt
dat/VO2/: VO2-50nm-metal-GlassSub.txt
dat/W/: CRC.txt  Palik.txt
dat/ZnS/: Debenham.txt
dat/ZnTe/: Adachi.txt
dat/a-Si/: Pierce.txt
src/: test.py
src/_emm_dat/: README.md
src/_emm_dat/Ag/: CRC.txt  CRC.yml  Johnson.yml  Palik_ir.yml  Palik_vis.yml  Rakic.txt  Rakic.yml
src/_emm_dat/Al/: CRC.yml  Palik.txt  Palik.yml  Rakic.txt  Rakic.yml  Rakic_2.yml
src/_emm_dat/Al2O3/: Palik.yml
src/_emm_dat/AlSb/: Adachi.yml
src/_emm_dat/Au/: CRC.yml  Johnson.yml  Palik.yml
src/_emm_dat/BP/: Wettling.yml
src/_emm_dat/C/: Phillip.yml
src/dat/V/: CRC.txt
src/emm/: __init__.py  _core.py  const.py
tests/: basics.ipynb  const.ipynb  custom_dat.ipynb  test.py
(+156 files in other folders)
