[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emm"
version = "1.0.0"
description = "electromagnetic material property manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jungho Mun", email = "jh92.mun@samsung.com" }
]
keywords = ["emm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=2.3.0",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "mypy"
]

[project.scripts]
emm = "emm.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://github.com/j-mun/emm"
Repository = "https://github.com/j-mun/emm"